# open-data-product-cookiecutter

./: README.md  cookiecutter.json
open-data-product-{{cookiecutter.data_product_id}}/: README.md  data-product-manifest.yml  main.py  pyproject.toml
