[project]
name = "{{ cookiecutter.data_product_id }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "open-data-product-python-lib",
    "rich>=14.1.0",
]

[tool.uv.sources]
open-data-product-python-lib = { git = "https://github.com/open-data-product/open-data-product-python-lib.git" }
